*** Changelog ***
= 1.2.5 - 2018-09-27 =
* Fix - Resolved performance issue.
* Dev - Removed WOO_WALLET_ICON constant.

= 1.2.4 - 2018-09-24 =
* Fix - Fatal error on WordPress Menu page.
* Fix - Hide partial payment option for guest user.
* Fix - Remaining balance display at email template.

= 1.2.3 -2018-09-24 =
* Fix- Partial payment.
* Fix - Dokan withdrawal.
* Add - Dokan auto withdrawal.
* Add - Wallet icon file.
* Add - Wallet actions (Admin can now set action for wallet credit).

= 1.2.2 - 2018-08-17 =
* Fix - Partial payment issue.

= 1.2.1 -2018-08-15 =
* Add - Screen option at transaction details page.
* Tweak - Partial payment using WooCommerce fee.

= 1.2.0 - 2018-07-26 =
* Add - Extension page.
* Fix - Refund using default WooCommerce refund function.
* Dev - details variable in email.
* Dev - Added filter `woo_wallet_rest_check_permissions`, `woo_wallet_process_cashback_status`, `woo_wallet_wc_price_args`.

= 1.1.10 - 2018-06-28 =
* Add - Wallet transfer charge.
* Dev - Created class instance.

= 1.1.9 - 2018-05-30 =
* Fix - Cashback calculation.

= 1.1.8 -2018 -05-28 =
* Add - Settings option to choose order status for processing cashback.
* Add - Filters in my wallet page and wallet icon constant.
* Add - Filter `woo_wallet_order_refunded`.
* Add - Support for WooCommerce 3.4.
* Add - Support for cashback setup from dokan dashboard.
* Fix - Payment gateway available check.
* Fix - Order cancellation hook.
* Fix - Cashback calculation added support for third party WooCommerce add-on.

= 1.1.7 - 2018-05-03 =
* Add - Filter `woo_wallet_restrict_other_from_add_to_cart`, `woo_wallet_disable_partial_payment`.
* Add - Wallet endpoint to WooCommerce endpoints menu option.
* Add - Wallet balance column to user table.
* Add - Decimal support for number field.
* Tweak - Wallet cashback logic.
* Dev - Added `deleted` column to transaction table.
* Fix - Wallet payment method.
* Fix - number format.
* Fix - Variable product cashback calculation.
